--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
-
 *.log
 
 *.tlog
 
 *.obj
 
-Contrib/CxImage/CxImage/x64/Debug/cximage\.lib
-
 Contrib/CxImage/CxImage/x64/Debug/cximage\.pdb
 
-*.idb
-
 *.lib
+
+!Contrib/imgui/examples/libs/glfw/lib-vc2010-64/*.lib
+!Contrib/imgui/examples/libs/glfw/lib-vc2010-32/*.lib
+
+*.idb
 
 *.pdb
 
