--- a/Tools/TextureViewer/TextureViewer.vcxproj.filters
+++ b/Tools/TextureViewer/TextureViewer.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="..\..\Contrib\imgui\examples\imgui_impl_opengl2.h">
       <Filter>Source Files\imgui</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\TestImage.cpp">
@@ -83,5 +86,24 @@
     <ClCompile Include="..\..\Contrib\imgui\examples\imgui_impl_opengl2.cpp">
       <Filter>Source Files\imgui</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="TextureViewer.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="icon2.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="TextureViewerTitlebar.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="icon1.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="TextureViewer.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
