--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ Contrib/NvidiaTextureTools/project/vs/nvtt/x64/Release/nvtt\.res
 Tools/TextureViewer/\.vs/TextureViewer/v15/\.suo
 
 Tools/TextureViewer/imgui\.ini
+
+*.aps
