DynDnsUpdater config environment being parsed.
The tool will read a script file in s-expr format. Two kinds of blocks, an environment one (sets loc of curl etc), and an 'update' one that specifies your dynamic dns provider etc.

--- a/Tools/DynDnsUpdate/DynDnsUpdate.cfg
+++ b/Tools/DynDnsUpdate/DynDnsUpdate.cfg
@@ -7,7 +7,7 @@
 	environment
 	[ statefile		DynDnsUpdate.ips ]			; This file stores the last IP addresses successfully sent.
 	[ logfile		verbose	DynDnsUpdate.log ]	; Choices are verbose, normal, and none (no writing to log).
-	[ ipservice		ifconfig.co ]				; What external service to use to receive your current IPV4 or IPV6 address.
+	[ ipservice		ifconfig.co ]				; What external service to use to receive your current IPV4 or IPV6 address. Defaults to ifconfig.co
 	[ curl			curl.exe ]					; Windows 10 has curl built in. Specify the path to curl.exe if you want to use a different version.
 ]
 
