DynDnsUpdater is live.
It works. Both ipv4 and ipv6 supported. Currently using spdyn which supports both A and AAAA records.

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,7 @@ Tools/TextureViewer/Debug/TextureViewer\.res
 *.ipdb
 
 Tools/DynDnsUpdate/\.vs/DynDnsUpdate/v15/\.suo
+
+Tools/DynDnsUpdate/DynDnsUpdate\.ips
+
+Tools/DynDnsUpdate/DynDnsUpdateTwookes\.cfg
