--- a/Tools/DynDnsUpdate/DynDnsUpdate.cfg
+++ b/Tools/DynDnsUpdate/DynDnsUpdate.cfg
@@ -5,41 +5,31 @@
 ; Use forward slashes for directory separators.
 [
 	environment
-	[ statefile		DynDnsUpdate.ips ]			; This file stores the last IP addresses successfully sent.
-	[ logfile		verbose	DynDnsUpdate.log ]	; Choices are verbose, normal, and none (no writing to log).
-	[ ipservice		ifconfig.co ]				; What external service to use to receive your current IPV4 or IPV6 address. Defaults to ifconfig.co
-	[ curl			curl.exe ]					; Windows 10 has curl built in. Specify the path to curl.exe if you want to use a different version.
-]
-
-[
-	update
-	[ domain		yourdomain.org ]
-	[ service		dyndns.dss.de ]
-	[ record		ipv4 ]					; Choices are A or AAAA (or use the synonyms ipv4 or ipv6)
-	[ protocol		https ]					; Choices are http or https. Use https if your service supports it.
-	[ username		username ]
-	[ password		password ]
-	[ mode			changed ]				; Choices are always (send every time) or changed (only send if different from last successful update).
+	[ statefile		DynDnsUpdate.ips ]			; Default. This file stores the last IP addresses successfully sent.
+	[ logfile		DynDnsUpdate.log ]			; Default. This log is appended to. Tells you when updates were applied/attempted.
+	[ verbosity		normal ]					; Default. Choices are verbose (logs attempts and updates), normal (updates only), and none (no writing to log).
+	[ iplookup		ifconfig.co ]				; Default. What external service to use to receive your current IPV4 or IPV6 address. Defaults to ifconfig.co
+	[ curl			curl.exe ]					; Default. Windows 10 has curl built in. Specify the path to curl.exe if you want to use a different version.
 ]
 
 [
 	update
 	[ domain		your.domain.org ]
-	[ service		dyndns.dss.de ]
-	[ record		ipv6 ]					; Choices are A or AAAA (or use the synonyms ipv4 or ipv6)
-	[ protocol		https ]					; Choices are http or https. Use https if your service supports it.
+	[ service		update.spdyn.de/nic/update ]
+	[ record		ipv4 ]						; Default. Choices are A or AAAA (or use the synonyms ipv4 or ipv6)
+	[ protocol		https ]						; Default. Choices are http or https. Use https if your service supports it.
 	[ username		username ]
 	[ password		password ]
-	[ mode			changed ]				; Choices are always (send every time) or changed (only send if different from last successful update).
+	[ mode			changed ]					; Default. Choices are always (send every time) or changed (only send if different from last successful update).
 ]
 
 [
 	update
 	[ domain		your.domain.org ]
-	[ service		dyndns.dss.de ]
-	[ record		ipv6 ]					; Choices are A or AAAA (or use the synonyms ipv4 or ipv6)
-	[ protocol		https ]					; Choices are http or https. Use https if your service supports it.
+	[ service		update.spdyn.de/nic/update ]
+	[ record		ipv6 ]						; Choices are A or AAAA (or use the synonyms ipv4 or ipv6)
+	[ protocol		https ]						; Default. Choices are http or https. Use https if your service supports it.
 	[ username		username ]
 	[ password		password ]
-	[ mode			changed ]				; Choices are always (send every time) or changed (only send if different from last successful update).
+	[ mode			changed ]					; Default. Choices are always (send every time) or changed (only send if different from last successful update).
 ]
