Ignore release folder.

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ Tools/DynDnsUpdate/\.vs/DynDnsUpdate/v15/\.suo
 Tools/DynDnsUpdate/DynDnsUpdate\.ips
 
 Tools/DynDnsUpdate/DynDnsUpdateTwookes\.cfg
+
+Tools/TextureViewer/Release/
