--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -57,7 +57,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>CONFIG_DEBUG;PLATFORM_WIN;ARCHITECTURE_X86;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\Modules\Foundation\Inc;..\..\Modules\Math\Inc;..\..\Modules\System\Inc;..\..\Modules\Image\Inc;..\..\Modules\Build\Inc;..\..\Modules\Scene\Inc</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\Modules\Foundation\Inc;..\Modules\Math\Inc;..\Modules\System\Inc;..\Modules\Image\Inc;..\Modules\Build\Inc;..\Modules\Scene\Inc</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -79,7 +79,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>PLATFORM_WIN;ARCHITECTURE_X86;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\Modules\Foundation\Inc;..\..\Modules\Math\Inc;..\..\Modules\System\Inc;..\..\Modules\Image\Inc;..\..\Modules\Build\Inc;..\..\Modules\Scene\Inc</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\Modules\Foundation\Inc;..\Modules\Math\Inc;..\Modules\System\Inc;..\Modules\Image\Inc;..\Modules\Build\Inc;..\Modules\Scene\Inc</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -91,73 +91,73 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Contrib\CxImage\CxImage\cximage.vcxproj">
+    <ProjectReference Include="..\Contrib\CxImage\CxImage\cximage.vcxproj">
       <Project>{c739151f-5384-41df-a1a6-f089e2c1ad56}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Contrib\CxImage\dcr\libdcr.vcxproj">
+    <ProjectReference Include="..\Contrib\CxImage\dcr\libdcr.vcxproj">
       <Project>{df861d33-9bc1-418c-82b1-581f590fe169}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Contrib\CxImage\jasper\jasper.vcxproj">
+    <ProjectReference Include="..\Contrib\CxImage\jasper\jasper.vcxproj">
       <Project>{ffda5da1-bb65-4695-b678-be59b4a1355d}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Contrib\CxImage\jpeg\Jpeg.vcxproj">
+    <ProjectReference Include="..\Contrib\CxImage\jpeg\Jpeg.vcxproj">
       <Project>{818753f2-dbb9-4d3b-898a-a604309be470}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Contrib\CxImage\mng\mng.vcxproj">
+    <ProjectReference Include="..\Contrib\CxImage\mng\mng.vcxproj">
       <Project>{40a69f40-063e-43fd-8543-455495d8733e}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Contrib\CxImage\png\png.vcxproj">
+    <ProjectReference Include="..\Contrib\CxImage\png\png.vcxproj">
       <Project>{43a0e60e-5c4a-4c09-a29b-7683f503bbd7}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Contrib\CxImage\psd\libpsd.vcxproj">
+    <ProjectReference Include="..\Contrib\CxImage\psd\libpsd.vcxproj">
       <Project>{0debb3cc-712b-4ac1-84df-e2d9d7d5f859}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Contrib\CxImage\tiff\Tiff.vcxproj">
+    <ProjectReference Include="..\Contrib\CxImage\tiff\Tiff.vcxproj">
       <Project>{0588563c-f05c-428c-b21a-dd74756628b3}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Contrib\CxImage\zlib\zlib.vcxproj">
+    <ProjectReference Include="..\Contrib\CxImage\zlib\zlib.vcxproj">
       <Project>{7b53d2c7-1b4a-4a53-a7d3-e25b92470b81}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Contrib\NvidiaTextureTools\project\vs\bc6h\bc6h.vcxproj">
+    <ProjectReference Include="..\Contrib\NvidiaTextureTools\project\vs\bc6h\bc6h.vcxproj">
       <Project>{c33787e3-5564-4834-9fe3-a9020455a669}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Contrib\NvidiaTextureTools\project\vs\bc7\bc7.vcxproj">
+    <ProjectReference Include="..\Contrib\NvidiaTextureTools\project\vs\bc7\bc7.vcxproj">
       <Project>{f974f34b-af02-4c88-8e1e-85475094ea78}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Contrib\NvidiaTextureTools\project\vs\nvcore\nvcore.vcxproj">
+    <ProjectReference Include="..\Contrib\NvidiaTextureTools\project\vs\nvcore\nvcore.vcxproj">
       <Project>{f143d180-d4c4-4037-b3de-be89a21c8d1d}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Contrib\NvidiaTextureTools\project\vs\nvimage\nvimage.vcxproj">
+    <ProjectReference Include="..\Contrib\NvidiaTextureTools\project\vs\nvimage\nvimage.vcxproj">
       <Project>{4046f392-a18b-4c66-9639-3eabfff5d531}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Contrib\NvidiaTextureTools\project\vs\nvmath\nvmath.vcxproj">
+    <ProjectReference Include="..\Contrib\NvidiaTextureTools\project\vs\nvmath\nvmath.vcxproj">
       <Project>{50c465fe-b308-42bc-894d-89484482af06}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Contrib\NvidiaTextureTools\project\vs\nvthread\nvthread.vcxproj">
+    <ProjectReference Include="..\Contrib\NvidiaTextureTools\project\vs\nvthread\nvthread.vcxproj">
       <Project>{4cfd4876-a026-46c2-afcf-fb11346e815d}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Contrib\NvidiaTextureTools\project\vs\nvtt\nvtt.vcxproj">
+    <ProjectReference Include="..\Contrib\NvidiaTextureTools\project\vs\nvtt\nvtt.vcxproj">
       <Project>{1aeb7681-57d8-48ee-813d-5c41cc38b647}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Contrib\NvidiaTextureTools\project\vs\squish\squish.vcxproj">
+    <ProjectReference Include="..\Contrib\NvidiaTextureTools\project\vs\squish\squish.vcxproj">
       <Project>{ce017322-01fc-4851-9c8b-64e9a8e26c38}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Modules\Build\Win\Build.vcxproj">
+    <ProjectReference Include="..\Modules\Build\Win\Build.vcxproj">
       <Project>{68ab18da-4df8-41c1-8c0c-1f753eea0d20}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Modules\Foundation\Win\Foundation.vcxproj">
+    <ProjectReference Include="..\Modules\Foundation\Win\Foundation.vcxproj">
       <Project>{1fd75ea6-1530-481f-9232-3ef3010c9729}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Modules\Image\Win\Image.vcxproj">
+    <ProjectReference Include="..\Modules\Image\Win\Image.vcxproj">
       <Project>{50cdb9d0-9406-45cc-a226-1645f18635f5}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Modules\Math\Win\Math.vcxproj">
+    <ProjectReference Include="..\Modules\Math\Win\Math.vcxproj">
       <Project>{4a67d21f-1b1f-42b6-b530-a4d690b21db4}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Modules\Scene\Win\Scene.vcxproj">
+    <ProjectReference Include="..\Modules\Scene\Win\Scene.vcxproj">
       <Project>{12f863c2-ea13-4538-9097-804195858d16}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Modules\System\Win\System.vcxproj">
+    <ProjectReference Include="..\Modules\System\Win\System.vcxproj">
       <Project>{e3bad3ce-e59d-4c1f-9759-7d585c145884}</Project>
     </ProjectReference>
   </ItemGroup>
