--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.vs/*
+
+UnitTests/.vs/*
+
 *.log
 
 *.tlog
@@ -8,8 +12,6 @@ Contrib/CxImage/CxImage/x64/Debug/cximage\.pdb
 
 *.lib
 
-!Contrib/imgui/examples/libs/glfw/lib-vc2010-64/*.lib
-!Contrib/imgui/examples/libs/glfw/lib-vc2010-32/*.lib
 !Contrib/glfw/Debug/*.lib
 !Contrib/glfw/Release/*.lib
 
