LTCG working for tacent.

--- a/Contrib/CxImage/jasper/jasper.vcxproj
+++ b/Contrib/CxImage/jasper/jasper.vcxproj
@@ -61,6 +61,7 @@
       <WarningLevel>Level2</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
