--- a/Contrib/NvidiaTextureTools/project/vs/nvthread/nvthread.vcxproj
+++ b/Contrib/NvidiaTextureTools/project/vs/nvthread/nvthread.vcxproj
@@ -58,6 +58,7 @@
       <AdditionalIncludeDirectories>$(ProjectDir)\..;$(ProjectDir)\..\..\..\src;$(ProjectDir)\..\..\..\extern\poshlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
