--- a/Modules/Foundation/Win/Foundation.vcxproj
+++ b/Modules/Foundation/Win/Foundation.vcxproj
@@ -180,6 +180,7 @@
       <CompileAs>Default</CompileAs>
       <EnablePREfast>false</EnablePREfast>
       <PrecompiledHeaderFile>$(TargetName)PCH.h</PrecompiledHeaderFile>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -212,6 +213,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <CompileAs>Default</CompileAs>
       <PrecompiledHeaderFile>$(TargetName)PCH.h</PrecompiledHeaderFile>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
