--- a/Contrib/NvidiaTextureTools/project/vs/bc6h/bc6h.vcxproj
+++ b/Contrib/NvidiaTextureTools/project/vs/bc6h/bc6h.vcxproj
@@ -72,6 +72,7 @@
       <AdditionalIncludeDirectories>$(ProjectDir)\..\;$(ProjectDir)\..\..\..\src;$(ProjectDir)\..\..\..\extern\poshlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <FunctionLevelLinking>true</FunctionLevelLinking>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -87,6 +88,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <AdditionalIncludeDirectories>$(ProjectDir)\..\;$(ProjectDir)\..\..\..\src;$(ProjectDir)\..\..\..\extern\poshlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
