--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -60,6 +60,7 @@
       <AdditionalIncludeDirectories>..\Modules\Foundation\Inc;..\Modules\Math\Inc;..\Modules\System\Inc;..\Modules\Image\Inc;..\Modules\Build\Inc;..\Modules\Scene\Inc</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -82,6 +83,7 @@
       <PreprocessorDefinitions>PLATFORM_WIN;ARCHITECTURE_X86;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>..\Modules\Foundation\Inc;..\Modules\Math\Inc;..\Modules\System\Inc;..\Modules\Image\Inc;..\Modules\Build\Inc;..\Modules\Scene\Inc</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
