--- a/Modules/System/Linux/System.project
+++ b/Modules/System/Linux/System.project
@@ -34,8 +34,12 @@
   </VirtualDirectory>
   <Settings Type="Static Library">
     <GlobalSettings>
-      <Compiler Options="" C_Options="" Assembler="">
+      <Compiler Options="-Wno-switch;-std=c++17" C_Options="" Assembler="">
         <IncludePath Value="."/>
+        <IncludePath Value="../Inc"/>
+        <IncludePath Value="../../Foundation/Inc"/>
+        <IncludePath Value="../../Math/Inc"/>
+        <Preprocessor Value="PLATFORM_LIN"/>
       </Compiler>
       <Linker Options="">
         <LibraryPath Value="."/>
@@ -44,11 +48,6 @@
     </GlobalSettings>
     <Configuration Name="Debug" CompilerType="clang( tags/RELEASE_900/final )" DebuggerType="LLDB Debugger" Type="Static Library" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
       <Compiler Options="-g" C_Options="-g" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
-        <IncludePath Value="."/>
-        <IncludePath Value="../Inc"/>
-        <IncludePath Value="../../Foundation/Inc"/>
-        <IncludePath Value="../../Math/Inc"/>
-        <Preprocessor Value="PLATFORM_LIN"/>
         <Preprocessor Value="CONFIG_DEBUG"/>
       </Compiler>
       <Linker Options="" Required="yes"/>
@@ -87,12 +86,7 @@
       </Completion>
     </Configuration>
     <Configuration Name="Release" CompilerType="clang( tags/RELEASE_900/final )" DebuggerType="LLDB Debugger" Type="Static Library" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="" C_Options="" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
-        <IncludePath Value="."/>
-        <IncludePath Value="../Inc"/>
-        <IncludePath Value="../../Foundation/Inc"/>
-        <IncludePath Value="../../Math/Inc"/>
-        <Preprocessor Value="PLATFORM_LIN"/>
+      <Compiler Options="-O2" C_Options="-O2" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
         <Preprocessor Value="CONFIG_RELEASE"/>
       </Compiler>
       <Linker Options="" Required="yes"/>
