Time and date functions work under Linux.

--- a/Modules/Foundation/Linux/Foundation.project
+++ b/Modules/Foundation/Linux/Foundation.project
@@ -42,7 +42,7 @@
       <Compiler Options="-Wno-switch;-std=c++17" C_Options="" Assembler="">
         <IncludePath Value="."/>
         <IncludePath Value="../Inc"/>
-        <Preprocessor Value="PLATFORM_LIN"/>
+        <Preprocessor Value="PLATFORM_LINUX"/>
       </Compiler>
       <Linker Options="">
         <LibraryPath Value="."/>
